# gcp-bigquery-client

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: general.yaml  general.yml
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
examples/: append_rows.rs  bq_load_job.rs  client.rs  data.json  local.rs  pagination.rs
model/: Cargo.toml
model/src/: argument.rs  arima_coefficients.rs  arima_fitting_metrics.rs  arima_forecasting_metrics.rs  arima_model_info.rs  arima_order.rs  arima_result.rs  arima_single_model_forecasting_metrics.rs  audit_config.rs  audit_log_config.rs  bigtable_column_family.rs  bigtable_options.rs  binary_classification_metrics.rs  binding.rs  bqml_training_run.rs  categorical_value.rs  category_count.rs  cluster.rs  clustering_metrics.rs  confusion_matrix.rs  connection_property.rs  data_format_options.rs  data_split_result.rs  dataset.rs  datasets.rs  dimensionality_reduction_metrics.rs  error.rs  evaluation_metrics.rs  explain_query_stage.rs  explanation.rs  expr.rs  external_data_configuration.rs  feature_value.rs  field_type.rs  get_iam_policy_request.rs  get_query_results_parameters.rs  get_query_results_response.rs  global_explanation.rs  iteration_result.rs  job.rs  (+53 more)
model/src/information_schema/: schemata.rs
src/: auth.rs  client.rs  client_builder.rs  dataset.rs  error.rs  job.rs  lib.rs  model_api.rs  project.rs  routine.rs  storage.rs  table.rs  tabledata.rs
src/de/: mod.rs  table_cell.rs  table_row.rs
src/google/: google.api.rs  google.cloud.bigquery.storage.v1.rs  google.rpc.rs
src/model/: aggregate_classification_metrics.rs  argument.rs  arima_coefficients.rs  arima_fitting_metrics.rs  arima_forecasting_metrics.rs  arima_model_info.rs  arima_order.rs  arima_result.rs  arima_single_model_forecasting_metrics.rs  audit_config.rs  audit_log_config.rs  bigquery_model_training.rs  bigtable_column.rs  bigtable_column_family.rs  bigtable_options.rs  binary_classification_metrics.rs  binary_confusion_matrix.rs  binding.rs  bqml_iteration_result.rs  bqml_training_run.rs  bqml_training_run_training_options.rs  categorical_value.rs  category_count.rs  cluster.rs  cluster_info.rs  clustering.rs  clustering_metrics.rs  confusion_matrix.rs  connection_property.rs  csv_options.rs  data_format_options.rs  data_split_result.rs  dataset.rs  dataset_reference.rs  datasets.rs  destination_table_properties.rs  dimensionality_reduction_metrics.rs  encryption_configuration.rs  entry.rs  error_proto.rs  (+96 more)
src/model/information_schema/: mod.rs  schemata.rs
src/serde/: mod.rs  time.rs
src/serde/de/: mod.rs  table_cell.rs  table_row.rs
