[package]
name = "gcp-bigquery-client"
version = "0.25.0"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
An ergonomic async client library for GCP BigQuery.
"""
homepage = "https://github.com/lquerel/gcp-bigquery-client"
repository = "https://github.com/lquerel/gcp-bigquery-client"
documentation = "https://docs.rs/gcp-bigquery-client"
readme = "README.md"
exclude = ["/.github/*"]
keywords = ["gcp", "bigquery", "google-cloud"]
categories = ["database"]

[features]
default = ["rust-tls", "ring", "gzip"]
native-tls = ["reqwest/native-tls"]
rust-tls = ["reqwest/rustls-tls"]
ring = ["yup-oauth2/ring"]
aws-lc-rs = ["yup-oauth2/aws-lc-rs"]
# Feature used to remove cloud-storage from the standard build.
# cloud-storage has a dependency on chrono, so the feature is there to remove this dependency by default.
bq_load_job = ["cloud-storage"]
gzip = ["flate2"]

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies]
yup-oauth2 = { version = "11", default-features = false, features = ["hyper-rustls", "service-account"] }
hyper = { version = "1.5.0", features = ["http1"] }
hyper-util = { version = "0.1.10", default-features = false, features = [
    "client-legacy",
] }
thiserror = "1.0.67"
tokio = { version = "1.41.0", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
] }
tokio-stream = "0.1.16"
async-stream = "0.3.6"
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
url = "2.5.3"
serde = "1.0.214"
serde_json = "1.0.132"
log = "0.4.22"
time = { version = "0.3.36", features = [
    "local-offset",
    "serde",
    "serde-well-known",
] }
cloud-storage = { version = "0.11.1", features = [
    "global-client",
], optional = true }
async-trait = "0.1.83"
dyn-clone = "1.0.17"
prost = "0.13.3"
prost-types = "0.13.3"
tonic = { version = "0.12.3", default-features = false, features = ["channel", "codegen", "prost", "tls", "tls-roots"] }

[dev-dependencies]
tokio-test = "0.4.4"
rand = "0.8.5"
wiremock = "0.6.2"
tempfile = "3.13.0"
fake = "2.9.2"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }
