[package]
name = "gcp-bigquery-client"
version = "0.26.0"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
An ergonomic async client library for GCP BigQuery.
"""
homepage = "https://github.com/lquerel/gcp-bigquery-client"
repository = "https://github.com/lquerel/gcp-bigquery-client"
documentation = "https://docs.rs/gcp-bigquery-client"
readme = "README.md"
exclude = ["/.github/*"]
keywords = ["gcp", "bigquery", "google-cloud"]
categories = ["database"]

[features]
default = ["rust-tls", "ring", "gzip"]
native-tls = ["reqwest/native-tls"]
rust-tls = ["reqwest/rustls-tls"]
ring = ["yup-oauth2/ring"]
aws-lc-rs = ["yup-oauth2/aws-lc-rs"]
# Feature used to remove cloud-storage from the standard build.
# cloud-storage has a dependency on chrono, so the feature is there to remove this dependency by default.
bq_load_job = ["cloud-storage"]
gzip = ["flate2"]

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies]
yup-oauth2 = { version = "12", default-features = false, features = ["hyper-rustls", "service-account"] }
hyper = { version = "1.6.0", features = ["http1"] }
hyper-util = { version = "0.1.14", default-features = false, features = [
    "client-legacy",
] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
url = "2.5.4"
serde = "1.0.219"
serde_json = "1.0.140"
log = "0.4.27"
time = { version = "0.3.41", features = [
    "local-offset",
    "serde",
    "serde-well-known",
] }
cloud-storage = { version = "0.11.1", features = [
    "global-client",
], optional = true }
async-trait = "0.1.88"
dyn-clone = "1.0.19"
prost = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = ["channel", "codegen", "prost", "tls", "tls-roots", "gzip"] }
futures = "0.3.31"
pin-project = "1.1.10"

[dev-dependencies]
tokio-test = "0.4.4"
rand = "0.9.1"
wiremock = "0.6.4"
tempfile = "3.20.0"
fake = "3.1.0"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }
